--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --progress --colors --watch",
-    "server": "nodemon dist/server.bundle.js"
+    "start": "nodemon dist/server.bundle.js"
   },
   "repository": {
     "type": "git",
@@ -37,10 +37,6 @@
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
-    "json-loader": "^0.5.4",
-    "morgan": "^1.8.1",
-    "mysql": "^2.13.0",
-    "nodemon": "^1.11.0",
     "sass-loader": "^6.0.4",
     "style-loader": "^0.17.0",
     "webpack": "^2.3.3",
@@ -56,6 +52,10 @@
     "knex": "^0.12.9",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "nodemon": "^1.11.0",
+    "json-loader": "^0.5.4",
+    "morgan": "^1.8.1",
+    "mysql": "^2.13.0",
   }
 }
