--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TravelApp",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -46,7 +46,6 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "bookshelf": "^0.10.3",
-    "crypto": "0.0.3",
     "express": "^4.15.2",
     "immutability-helper": "^2.2.0",
     "knex": "^0.12.9",
@@ -56,6 +55,6 @@
     "nodemon": "^1.11.0",
     "json-loader": "^0.5.4",
     "morgan": "^1.8.1",
-    "mysql": "^2.13.0",
+    "mysql": "^2.13.0"
   }
 }
